[package]
name = "rust-rush-trivia"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Client-only dependencies
ratatui = "0.29"
crossterm = "0.28"

# Shared utilities
chrono = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
html-escape = "0.2"
